guestbook-go/guestbook-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: guestbook
  labels:
    app: guestbook
spec:
  to:
    kind: Service
    name: guestbook
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
  wildcardPolicy: None
